# pocket_option

./: .env.example  .gitignore  main.py  pyproject.toml
pocket_option/: bot.py  captcha.py  crawler.py
