[tool.poetry]
name = "pocket-option"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.12.0"
botasaurus = "^4.0.58"
python-multipart = "^0.0.9"
2captcha-python = "^1.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
